<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="140dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/setTreeNameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/google_sans_regular"
            android:hint="Tree Name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmSaveTreeButton"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_bt_blue"
                android:fontFamily="@font/google_sans_regular"
                android:padding="5dp"
                android:paddingStart="0dp"
                android:text="Save"
                android:textAppearance="@style/topicslist"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelSaveTreeButton"
                android:layout_width="10dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_bt_blue"
                android:fontFamily="@font/google_sans_regular"
                android:padding="5dp"
                android:paddingStart="0dp"
                android:text="Cancel"
                android:textAppearance="@style/topicslist"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>