...

                        </androidx.appcompat.widget.AppCompatButton>

                    </LinearLayout>

<!--                    <ImageButton-->
<!--                        android:id="@+id/button_insert"-->
<!--                        android:layout_width="30dp"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:layout_alignParentEnd="true"-->
<!--                        android:layout_alignParentBottom="true"-->
<!--                        android:layout_marginRight="30dp"-->
<!--                        android:layout_marginBottom="15dp"-->
...
<!--                        android:visibility="gone"-->
<!--                        android:src="@drawable/search">-->

<!--                    </ImageButton>-->

                    <EditText
                        android:id="@+id/input_nodes"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
...
